--- a/.github/workflows/commit-booster.yml
+++ b/.github/workflows/commit-booster.yml
@@ -26,6 +26,8 @@ jobs:
           done
 
       - name: Push changes
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/HellMarr/gh-activity-booster.git
-          git push
+          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/HellMarr/gh-activity-booster.git
+          git push origin main
